--- a/src/app/comun/desarrollador/formEventosComponent/formEventos.component.sass
+++ b/src/app/comun/desarrollador/formEventosComponent/formEventos.component.sass
@@ -214,6 +214,14 @@
       position: absolute
       top: 5%
       width: 5%
+      left: 2%
+      &:hover
+        filter: invert(1)
+
+    .botonEliminarOrden
+      position: absolute
+      top: 5%
+      width: 5%
       right: 5%
       &:hover
         filter: invert(1)
