--- a/src/app/comun/mapa-general/mapaGeneral.component.sass
+++ b/src/app/comun/mapa-general/mapaGeneral.component.sass
@@ -43,23 +43,6 @@
   overflow: hidden
 
   #mascaraVision
-  
-  #flechasMovimiento
-    z-index: 1
-    .flecha
-      position: absolute
-      width: 47px
-      height: 47px
-      border-radius: 3px
-      z-index: 100
-      transform-style: preserve-3d
-      -webkit-transform-style: preserve-3d
-      background-image: url("../../../assets/ui/scrolling/scr_01.png")
-      background-size: contain
-      background-repeat: no-repeat
-      opacity: 0.7
-      animation: flechaMovimiento 2s infinite
-      pointer-events: all
 
   #marcadorCentro
     position: absolute
@@ -186,9 +169,9 @@
     position: absolute
     width: 650px //Radio de 6 Casillas
     height: 650px //Radio de 6 Casillas
-    //-webkit-transform: rotateX(55deg) rotateZ(45deg)
-    -webkit-transform: rotateX(0deg) rotateZ(0deg)
-    transform: rotateX(0deg) rotateZ(0deg) !important
+    -webkit-transform: rotateX(55deg) rotateZ(45deg)
+    //-webkit-transform: rotateX(0deg) rotateZ(0deg)
+    //transform: rotateX(0deg) rotateZ(0deg) !important
     -webkit-transform-style: preserve-3d
     transition: all 1s
     font-size: 0
