--- a/src/app/comun/animacion-focus/animacion-focus.component.sass
+++ b/src/app/comun/animacion-focus/animacion-focus.component.sass
@@ -2,72 +2,70 @@
 @import "../../../variables.sass"
 @import "../../../breakpoints.scss"
 
+$path-width: 5px
 
-.contenedorBarra
-    position: absolute
+.contenedorAnimacionFocus
+  position: absolute
+  width: 100%
+  height: 100%
+  overflow: hidden
+  box-sizing: border-box
+  box-shadow: inset 0 0 $path-width $path-width rgba(#fff, .5)
+
+.mascaraCentral
+  position: absolute
+  width: 100%
+  height: 100%
+
+.imagenFondo
+  position: absolute
+  mask: url(#svgmask1)
+  mask-repeat: no-repeat
+  mask-size: 100%
+  width: 100%
+  height: 100%
+
+.contenedorAspas
+  position: absolute
+  width: 100%
+  height: 100%
+  overflow: hidden
+  clip-path: polygon(0% 0%, 0% 100%, 10% 100%, 10% 10%, 90% 10%, 90% 90%, 10% 90%, 10% 100%, 100% 100%, 100% 0%)
+  
+.aspas
+  position: relative
+  width: 100%
+  height: 100%
+  animation: o-rotate-360 linear 2s infinite
+
+  span
+    display: block
     width: 100%
     height: 100%
+    position: relative
+    transform: translate(-50%, -50%)
 
-    .barra
-        position: absolute
-        top: 10%
-        width: 100%
-        height: 100%
-        .frameBarra
-            position: absolute
-            display: block
-            top: 0
-            left: 0
-            height: 100%
-            width: 100%
+    &:after
+      display: block
+      content: ""
+      width: 100% 
+      height: 100%
+      position: absolute
+      left: 100%
 
-        .fondoBarra
-            position: absolute
-            width: 100%
-            height: 100%
-            background-repeat: no-repeat
-            background-size: 100% 100%
-            &.escudo
-                background-color: white
-            &.Vida
-                background-image: url("../../../assets/Background/Fondo-Vida.png")
-            &.Mana
-                background-image: url("../../../assets/Background/Fondo-Mana.png")
-            &.Energia
-                background-image: url("../../../assets/Background/Fondo-Energia.png")
+    &:first-child
+      background: radial-gradient(circle, white, transparent)
+      &:after
+        background: none
 
-    .contenedorCirculo
-        position: absolute
-        height: 100%
-        top: 0
-        right: 0
-        border-radius: 100%
-        &.Vida
-            background-color: #990033
-        &.Mana
-            background-color: #0033cc
-        &.Energia
-            background-color: #ff9900
+    &:last-child
+      background: none
+      &:after
+        background: radial-gradient(circle, white, transparent) 
 
-        .frameCirculo
-            display: block
-            top: 0
-            right: 0
-            height: 110%
-            width: auto
-
-        .iconoTipoBarra
-            position: absolute
-            display: block
-            top: 50%
-            left: 50%
-            height: 50%
-            width: 50%
-            transform: translate(-50%,-50%)
-
-
-
-
-
-
+@keyframes o-rotate-360
+  0% 
+    transform: rotate(0)
+  100%
+    transform: rotate(360deg)
 
