--- a/src/app/comun/inmap/inmap.component.sass
+++ b/src/app/comun/inmap/inmap.component.sass
@@ -137,12 +137,15 @@
 
     #panelControl
       position: absolute
-      display: block
-      bottom: 3%
+      display: flex
+      justify-content: center
+      bottom: 5%
       left: 43%
-      width: 40%
-      height: 30%
-      margin-left: -20%
+      width: 30%
+      height: 10%
+      margin-left: -15%
+      z-index: 10
+
      
     #experiencia
       position: absolute
@@ -210,4 +213,72 @@
       z-index: 10
       top: 0
       left: 0
+
+#contenedorNoche
+  position: absolute
+  width: 100%
+  height: 100%
+  z-index: 20
+  background-color: black
+  display: flex
+  justify-content: center
+  align-items: center
+  animation: fadeInNoche 16s ease
+  animation-fill-mode: forwards 
+
+  .imagenLuna
+    position: relative
+    filter: grayscale(1)
+    height: 30%
+    opacity: 0
+    animation: fadeInNoche 16s ease
+    animation-delay: 2s
+    animation-fill-mode: forwards 
+
+  .contenedorTextoNoche
+    position: relative
+    margin-left: 50px
+    width: 60%
+    display: flex
+    align-items: center
+
+    .textoNoche
+      position: absolute
+      color: white
+      font-size: 40px
+      opacity: 0
+
+      &.slide1
+        animation: fadeSlideNoche 6s ease
+        animation-delay: 2s
+        animation-fill-mode: forwards 
+
+      &.slide2
+        animation: fadeSlideNoche 18s ease
+        animation-delay: 8s
+        animation-fill-mode: forwards 
+
+@keyframes fadeInNoche
+  0%
+    opacity: 0
+  12.5%
+    opacity: 1
+  87.5%
+    opacity: 1
+  100%
+    opacity: 0
+
+@keyframes fadeSlideNoche
+  0%
+    opacity: 0
+  25%
+    opacity: 1
+  50%
+    opacity: 1
+  100%
+    opacity: 0
+
+
+
+
 
