--- a/src/app/comun/panel-control/panel-control.component.html
+++ b/src/app/comun/panel-control/panel-control.component.html
@@ -3,7 +3,8 @@
 <!--       Panel Control   -->
 <!--   ******************* -->
 
-<div class="contenedorPanelControl">
+<!-- Control MAZMORRA -->
+<div id="contenedorControlMazmorra" *ngIf="tipo=='mazmorra'">
 
     <div class="frameAnimacionesFrame shaderFondo" [ngClass]="{'shaderFuego': turno}"></div>
 
@@ -21,7 +22,7 @@
 	</div>
 
 	<!-- Boton Lateral Derecho -->
-	<div *ngIf="tipo=='mazmorra'" class="contenedorBotonLateral derecho" (click)="enviarComando('derecha')">
+	<div class="contenedorBotonLateral derecho" (click)="enviarComando('derecha')">
         <div class="frameAnimacionesFrame" *ngIf="turno">
           <img class="spriteFuego" src="../../../assets/Efectos/35.png"/>
         </div>
@@ -29,7 +30,7 @@
 	</div>
 
 	<!-- Boton Lateral Izquierdo -->
-	<div *ngIf="tipo=='mazmorra'" class="contenedorBotonLateral izquierdo" (click)="enviarComando('izquierda')">
+	<div class="contenedorBotonLateral izquierdo" (click)="enviarComando('izquierda')">
         <div class="frameAnimacionesFrame" *ngIf="turno">
           <img class="spriteFuego" src="../../../assets/Efectos/35.png"/>
         </div>
@@ -37,21 +38,40 @@
 	</div>
 
 	<!-- Indicador Vida -->
-	<div *ngIf="tipo=='mazmorra'" class="contenedorVida">
+	<div class="contenedorVida">
 		<img class="fondoIndicador" src="assets/ui/icons/fondo-vida.png"/>
         <div class="valorIndicador Texto1">{{vida}}</div>
 	</div>
 
 	<!-- Indicador Energia -->
-	<div *ngIf="tipo=='mazmorra'" class="contenedorEnergia">
+	<div class="contenedorEnergia">
 		<img class="fondoIndicador" src="assets/ui/icons/fondo-energia.png"/>
         <div class="valorIndicador Texto1">{{energia}}</div>
 	</div>
 
 	<!-- Indicador Energia Futura -->
-	<div *ngIf="tipo=='mazmorra'" class="contenedorEnergiaFutura">
+	<div class="contenedorEnergiaFutura">
 		<img class="fondoIndicador" src="assets/ui/icons/fondo-energia.png"/>
         <div class="valorIndicador Texto2">{{energiaFutura}}</div>
 	</div>
+
+</div>
+
+<!-- Control MAZMORRA -->
+<div id="contenedorControlInMap" *ngIf="tipo=='inMap'">
+
+    <div class="fondoDetalle">
+    </div>
+
+	<!-- Indicador Movimientos Restantes -->
+	<div class="contenedorMovimientosRestantes">
+		<img class="fondoIndicador" src="assets/ui/icons/fondo-energia.png"/>
+        <div class="valorIndicador Texto1">{{movimientoRestante}}</div>
+	</div>
+
+    <div class="texto">
+        {{mensajeControl}}
+    </div>
+
 
 </div>
