--- a/src/app/comun/panel-control/panel-control.component.sass
+++ b/src/app/comun/panel-control/panel-control.component.sass
@@ -2,7 +2,7 @@
 @import "../../../variables.sass"
 @import "../../../breakpoints.scss"
 
-.contenedorPanelControl
+#contenedorControlMazmorra
     position: absolute
     width: 100%
     height: 100%
@@ -85,6 +85,7 @@
     left: 35%
     z-index: 7
     .diamante
+
       position: absolute
       height: 70%
       filter: grayscale(1)
@@ -114,5 +115,52 @@
   width: 100%
   height: 200%
   left: -1%
+
+#contenedorControlInMap
+  position: absolute
+  height: 100%
+  color: $colorTexto
+  display: flex
+  align-items: center
+  background-color: $colorFondo1
+  border: 2px solid $colorTexto
+  border-radius: 10vh 
+
+  .fondoDetalle
+    position: absolute
+    width: 100%
+    height: 100%
+
+  .texto
+    position: relative
+    margin-left: 5px
+    margin-right: 20px
+    color: white
+
+  .contenedorMovimientosRestantes
+    position: relative
+    display: flex
+    justify-content: center
+    align-items: center
+    height: 110%
+    left: -2px 
+    aspect-ratio: 1
+
+    .fondoIndicador
+      position: absolute
+      width: 100%
+      height: 100%
+
+    .valorIndicador
+      position: absolute
+      display: flex
+      align-items: center
+      justify-content: center
+      color: white
+      width: 100%
+      height: 100%
+      text-align: center
+
+
 
 
