--- a/src/app/comun/desarrollador/formClasesComponent/formClases.component.html
+++ b/src/app/comun/desarrollador/formClasesComponent/formClases.component.html
@@ -11,6 +11,8 @@
             [botonAdd]="true"
             [lateral]="'izquierda'"
             [botonEliminarRelacion]="false"
+            (addElementoEmitter)="addHechizoClase()"
+            (selector)="seleccionarHechizoClase($event)"
             >
     </panelSelectorComponent>
 
