--- a/src/app/comun/desarrollador/formEventosComponent/formEventos.component.sass
+++ b/src/app/comun/desarrollador/formEventosComponent/formEventos.component.sass
@@ -151,6 +151,7 @@
       height: 20%
       left: 2%
       background-color: grey
+      overflow-y: scroll
       &.contenedorOrdenes
         top: 25%
         height: 65%
