--- a/src/app/comun/dialogos/dialogos.component.html
+++ b/src/app/comun/dialogos/dialogos.component.html
@@ -224,7 +224,7 @@
             <div class="contenido Texto3">{{data.contenido}}</div>
         </div>
 
-        <botonComponent mat-button [mat-dialog-close]="continuar" [tipoBoton]="2" [texto]="'Siguiente'" class="botonUnico"></botonComponent>
+        <botonComponent mat-button [mat-dialog-close]="data.ordenEncadenado" [tipoBoton]="2" [texto]="'Siguiente'" class="botonUnico"></botonComponent>
         <frameComponent [tipoFondo]="'papiro'"></frameComponent>
     </div> <!-- Fin Contenedor Central -->
 </div>
@@ -265,7 +265,7 @@
         </div>
         -->
 
-        <botonComponent mat-button [mat-dialog-close]="continuar" [tipoBoton]="2" [texto]="'Siguiente'" class="botonUnico"></botonComponent>
+        <botonComponent mat-button [mat-dialog-close]="data.ordenEncadenado" [tipoBoton]="2" [texto]="'Siguiente'" class="botonUnico"></botonComponent>
         <frameComponent [tipoFondo]="'papiro'"></frameComponent>
     </div> <!-- Fin Contenedor Central -->
 </div>
