--- a/src/app/comun/mapa-general/mapaGeneral.component.sass
+++ b/src/app/comun/mapa-general/mapaGeneral.component.sass
@@ -207,6 +207,8 @@
           border: 2px dashed orange
         &.infranqueable
           border: 2px solid red
+        &.triggers
+          border: 2px solid yellow
         &.noDisplay
           display: none
         
