--- a/src/app/comun/desarrollador/formBuffComponent/formBuff.component.html
+++ b/src/app/comun/desarrollador/formBuffComponent/formBuff.component.html
@@ -10,6 +10,8 @@
             [botonAdd]="true"
             [lateral]="'izquierda'"
             [botonEliminarRelacion]="false"
+            (addElementoEmitter)="addBuff()"
+            (selector)="seleccionarBuff($event)"
             >
         </panelSelectorComponent>
 
