--- a/src/app/comun/desarrollador/formEventosComponent/formEventos.component.html
+++ b/src/app/comun/desarrollador/formEventosComponent/formEventos.component.html
@@ -5,24 +5,27 @@
 
 		<!-- LISTA EVENTOS -->
         <panelSelectorComponent
-            [datos]="this.desarrolladorService.eventos.eventos"
+            [datos]="eventos"
             [tipo]="'Eventos'"
             [titulo]="'Eventos'"
             [botonAdd]="true"
             [lateral]="'izquierda'"
             [botonEliminarRelacion]="false"
+            [indexSeleccionado]="eventoSeleccionadoIndex"
+            (addElementoEmitter)="addEvento()"
+            (selector)="seleccionarEvento($event)"
             >
         </panelSelectorComponent>
 
 		<!-- Boton TEST EVENTO -->
-        <botonComponent class="botonTest" (click)="desarrolladorService.testEvento()" mat-button [tipoBoton]="2" [texto]="'TEST'" [color]="'naranja'"></botonComponent>
+        <botonComponent class="botonTest" (click)="testEvento()" mat-button [tipoBoton]="2" [texto]="'TEST'" [color]="'naranja'"></botonComponent>
 
 		<!-- CENTRAL DATOS EVENTOS -->
         <div id="visualizadorEventos" *ngIf="desarrolladorService.estadoHerramientaDatos=='Eventos'">
 
 			<form  class="formularioGeneral evento" [formGroup]="formEvento">
 
-					<img class="botonEliminar" src="./assets/desarrollador/papelera.svg" (click)="desarrolladorService.eliminarEvento()"/>
+					<img class="botonEliminar" src="./assets/desarrollador/papelera.svg" (click)="eliminarEvento()"/>
 
 				  <mat-form-field appearance="legacy">
 					<mat-label>Nombre Evento</mat-label>
@@ -36,8 +39,8 @@
 
 			</form>
 
-            <form *ngIf="this.desarrolladorService.ordenSeleccionadaIndex!=null" class="formularioGeneral orden" [formGroup]="formOrden">
-				<img class="botonEliminarOrden" src="./assets/desarrollador/papelera.svg" (click)="desarrolladorService.eliminarOrden()"/>
+            <form *ngIf="ordenSeleccionadaIndex!=null" class="formularioGeneral orden" [formGroup]="formOrden">
+				<img class="botonEliminarOrden" src="./assets/desarrollador/papelera.svg" (click)="eliminarOrden()"/>
 
                 <div class="contenedorCabeceraOrden">
 				  <mat-form-field appearance="legacy" class="formNombreOrden">
@@ -61,7 +64,7 @@
                   <div  class="contenedorParametrosOrden">
 
                     <!-- Orden Condición -->
-			        <form *ngIf="desarrolladorService.tipoOrdenSeleccionada=='condicion'" class="formularioGeneral" [formGroup]="formOrdenCondicion">
+			        <form *ngIf="tipoOrdenSeleccionada=='condicion'" class="formularioGeneral" [formGroup]="formOrdenCondicion">
                       <div  class="contenedorTipoOrden">
                           <mat-form-field appearance="legacy" class="formParametro">
                             <mat-label>Variable</mat-label>
@@ -136,7 +139,7 @@
                     </form>
 
                     <!-- Orden Variable -->
-			        <form *ngIf="desarrolladorService.tipoOrdenSeleccionada=='variable'" class="formularioGeneral" [formGroup]="formOrdenVariable">
+			        <form *ngIf="tipoOrdenSeleccionada=='variable'" class="formularioGeneral" [formGroup]="formOrdenVariable">
                       <div  class="contenedorTipoOrden">
 
                           <mat-form-field appearance="fill">
@@ -169,7 +172,7 @@
                     </form>
 
                     <!-- Orden Misión -->
-			        <form *ngIf="desarrolladorService.tipoOrdenSeleccionada=='mision'" class="formularioGeneral" [formGroup]="formOrdenMision">
+			        <form *ngIf="tipoOrdenSeleccionada=='mision'" class="formularioGeneral" [formGroup]="formOrdenMision">
                       <div  class="contenedorTipoOrden">
 
                           <mat-form-field appearance="fill">
@@ -198,7 +201,7 @@
                     </form>
 
                     <!-- Orden Trigger -->
-			        <form *ngIf="desarrolladorService.tipoOrdenSeleccionada=='trigger'" class="formularioGeneral" [formGroup]="formOrdenTrigger">
+			        <form *ngIf="tipoOrdenSeleccionada=='trigger'" class="formularioGeneral" [formGroup]="formOrdenTrigger">
                       <div  class="contenedorTipoOrden">
 
                           <mat-form-field appearance="fill">
@@ -223,7 +226,7 @@
                     </form>
 
                     <!-- Orden Diálogo -->
-			        <form  *ngIf="desarrolladorService.tipoOrdenSeleccionada=='dialogo'" class="formularioGeneral" [formGroup]="formOrdenDialogo">
+			        <form  *ngIf="tipoOrdenSeleccionada=='dialogo'" class="formularioGeneral" [formGroup]="formOrdenDialogo">
                       <div  class="contenedorTipoOrdenDialogo">
 
                           <mat-form-field appearance="fill" >
@@ -343,6 +346,11 @@
                                 <input matInput type="number" placeholder="" formControlName="imagenId"/>
                               </mat-form-field>
 
+                              <mat-form-field appearance="legacy" class="formParametro">
+                                <mat-label>Encadenado True</mat-label>
+                                <input matInput type="number" placeholder="" formControlName="ordenEncadenado">
+                              </mat-form-field>
+
                           </ng-container> <!-- Fin tipo dialogo NarradorImg -->
 
                           <!-- INPUTS TIPO DIALOGO: DIAPOSITIVA -->
@@ -371,13 +379,18 @@
                                 <input matInput type="number" placeholder="" formControlName="imagenId"/>
                               </mat-form-field>
 
+                              <mat-form-field appearance="legacy" class="formParametro">
+                                <mat-label>Encadenado</mat-label>
+                                <input matInput type="number" placeholder="" formControlName="ordenEncadenado">
+                              </mat-form-field>
+
                           </ng-container> <!-- Fin tipo dialogo Diapositiva -->
 
                       </div> <!-- Fin Orden Diálogo -->
                     </form>
 
                     <!-- Orden Hechizo -->
-			        <form *ngIf="desarrolladorService.tipoOrdenSeleccionada=='hechizo'" class="formularioGeneral " [formGroup]="formOrdenHechizo">
+			        <form *ngIf="tipoOrdenSeleccionada=='hechizo'" class="formularioGeneral " [formGroup]="formOrdenHechizo">
                       <div  class="contenedorTipoOrden">
 
                           <mat-form-field appearance="fill">
@@ -418,7 +431,7 @@
                     </form>
 
                     <!-- Orden Loot -->
-			        <form *ngIf="desarrolladorService.tipoOrdenSeleccionada=='loot'" class="formularioGeneral " [formGroup]="formOrdenLoot">
+			        <form *ngIf="tipoOrdenSeleccionada=='loot'" class="formularioGeneral " [formGroup]="formOrdenLoot">
                       <div  class="contenedorTipoOrden">
 
                           <mat-form-field appearance="fill">
@@ -450,7 +463,7 @@
                     </form>
 
                     <!-- Orden Enemigo -->
-			        <form *ngIf="desarrolladorService.tipoOrdenSeleccionada=='enemigo'" class="formularioGeneral " [formGroup]="formOrdenEnemigo">
+			        <form *ngIf="tipoOrdenSeleccionada=='enemigo'" class="formularioGeneral " [formGroup]="formOrdenEnemigo">
                       <div  class="contenedorTipoOrden">
 
                           <mat-form-field appearance="fill">
@@ -475,7 +488,7 @@
                     </form>
 
                     <!-- Orden Mazmorra -->
-			        <form  *ngIf="desarrolladorService.tipoOrdenSeleccionada=='mazmorra'" class="formularioGeneral " [formGroup]="formOrdenMazmorra">
+			        <form  *ngIf="tipoOrdenSeleccionada=='mazmorra'" class="formularioGeneral " [formGroup]="formOrdenMazmorra">
                       <div  class="contenedorTipoOrden">
 
                           <mat-form-field appearance="fill">
@@ -501,7 +514,7 @@
                     </form>
 
                     <!-- Orden Multimedia -->
-			        <form  *ngIf="desarrolladorService.tipoOrdenSeleccionada=='multimedia'" class="formularioGeneral " [formGroup]="formOrdenMultimedia">
+			        <form  *ngIf="tipoOrdenSeleccionada=='multimedia'" class="formularioGeneral " [formGroup]="formOrdenMultimedia">
                       <div  class="contenedorTipoOrden">
 
                           <mat-form-field appearance="fill">
@@ -530,7 +543,7 @@
                     </form>
 
                     <!-- Orden Tiempo -->
-			        <form  *ngIf="desarrolladorService.tipoOrdenSeleccionada=='tiempo'" class="formularioGeneral " [formGroup]="formOrdenTiempo">
+			        <form  *ngIf="tipoOrdenSeleccionada=='tiempo'" class="formularioGeneral " [formGroup]="formOrdenTiempo">
                       <div  class="contenedorTipoOrden">
 
                           <mat-form-field appearance="fill">
@@ -550,20 +563,17 @@
 
                       </div> <!-- Fin Orden Tiempo -->
                     </form>
-
                   </div> <!-- Fin Parametros Orden -->
-
 
 			<!-- Inicio panel Ordenes -->
 			<div class="contenedorSubLista contenedorOrdenes">
-				
-				<div class="tituloSubLista">Ordenes:</div>
-				<div *ngFor="let orden of this.desarrolladorService.eventos.eventos[desarrolladorService.eventoSeleccionadoIndex].ordenes; let i=index"  class="elemento" [ngClass]="renderListaSeleccionado(i)" (click)="desarrolladorService.seleccionarOrden(i,orden)">{{orden.nombre}} </div>
+                <div class="tituloSubLista">Ordenes:</div>
+				<div *ngFor="let orden of eventos[eventoSeleccionadoIndex].ordenes; let i=index"  class="elemento" [ngClass]="renderListaSeleccionado(i)" (click)="seleccionarOrden(i)">{{orden.nombre}} </div>
 			</div>
 
             <div class="contenedorBotonesOrdenarOrdenes">
-                <img class="imagenSubir" (click)="this.desarrolladorService.ordenarOrden('subir')" src="./assets/desarrollador/flecha-izquierda.png"/>
-                <img class="imagenBajar" (click)="this.desarrolladorService.ordenarOrden('bajar')" src="./assets/desarrollador/flecha-izquierda.png"/>
+                <img class="imagenSubir" (click)="ordenarOrden('subir')" src="./assets/desarrollador/flecha-izquierda.png"/>
+                <img class="imagenBajar" (click)="ordenarOrden('bajar')" src="./assets/desarrollador/flecha-izquierda.png"/>
             </div>
 
 		</div> <!-- FIN VISUALIZACIÓN EVENTOS -->
@@ -572,7 +582,7 @@
 	  <div class="contenedorLateral derecha">
         <div class="titulo"*ngIf="desarrolladorService.estadoHerramientaDatos=='Eventos'">Ordenes Evento:</div>
 		<div class="lista"*ngIf="desarrolladorService.estadoHerramientaDatos=='Eventos'">
-            <div *ngFor="let orden of this.tiposOrdenes; let i=index"  class="hechizo" (click)="desarrolladorService.addOrden(formatearTipoOrden(orden))">
+            <div *ngFor="let orden of this.tiposOrdenes; let i=index"  class="hechizo" (click)="addOrden(formatearTipoOrden(orden))">
                 <img class="imagen" src="./assets/desarrollador/{{formatearTipoOrden(orden)}}.png">
 				<div [ngStyle]= "renderizarOrdenSeleccionada(orden)" class="nombre">{{orden}}</div>
                 <img class="imagen" src="./assets/desarrollador/{{formatearTipoOrden(orden)}}.png">
