--- a/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.html
+++ b/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.html
@@ -10,6 +10,8 @@
             [botonAdd]="true"
             [lateral]="'izquierda'"
             [botonEliminarRelacion]="false"
+            (addElementoEmitter)="addHechizo()"
+            (selector)="seleccionarHechizo($event)"
             >
         </panelSelectorComponent>
 
