--- a/src/app/comun/desarrollador/formMisionesComponent/formMisiones.component.html
+++ b/src/app/comun/desarrollador/formMisionesComponent/formMisiones.component.html
@@ -12,6 +12,8 @@
             [botonAdd]="true"
             [lateral]="'izquierda'"
             [botonEliminarRelacion]="false"
+            (addElementoEmitter)="addMision()"
+            (selector)="seleccionarMision($event)"
             >
     </panelSelectorComponent>
 
