--- a/src/app/comun/desarrollador/panelSelectorComponent/panelSelector.component.html
+++ b/src/app/comun/desarrollador/panelSelectorComponent/panelSelector.component.html
@@ -11,7 +11,7 @@
 
             <!-- LISTA HECHIZOS -->
             <ng-container *ngIf="tipo=='Hechizos'">
-                <div *ngFor="let hechizo of this.desarrolladorService.hechizos.hechizos; let i=index" [ngClass]="renderListaSeleccionado('hechizo',i)" class="hechizo" (click)="desarrolladorService.seleccionarHechizo(i)">
+                <div *ngFor="let hechizo of this.desarrolladorService.hechizos.hechizos; let i=index" [ngClass]="renderListaSeleccionado(i)" class="hechizo" (click)="seleccionarElemento(i)">
                     <img class="imagen" src="./assets/Habilidades/Spell/{{hechizo.imagen_id}}.png">
                     <div class="nombre">[{{hechizo.id}}] {{hechizo.nombre}}</div>
                 </div>
@@ -19,7 +19,7 @@
 
             <!-- LISTA BUFF -->
             <ng-container *ngIf="tipo=='Buff'">
-                <div *ngFor="let buff of this.desarrolladorService.buff.buff; let i=index" [ngClass]="renderListaSeleccionado('buff',i)" class="hechizo" (click)="desarrolladorService.seleccionarBuff(i)">
+                <div *ngFor="let buff of this.desarrolladorService.buff.buff; let i=index" [ngClass]="renderListaSeleccionado(i)" class="hechizo" (click)="seleccionarElemento(i)">
                     <img class="imagen" src="./assets/Habilidades/Spell/{{buff.imagen_id}}.png">
                     <div class="nombre">[{{buff.id}}] {{buff.nombre}}</div>
                 </div>
@@ -55,7 +55,7 @@
                     <img class="imagen" src="./assets/desarrollador/papelera.svg">
                     <div class="nombre">Eliminar animación</div>
                 </div>
-                <div *ngFor="let animacion of this.desarrolladorService.animaciones.animaciones; let i=index" [ngClass]="renderListaSeleccionado('animacionHechizo',i)" class="hechizo" (click)="desarrolladorService.addAnimacionHechizo(i)">
+                <div *ngFor="let animacion of this.desarrolladorService.animaciones.animaciones; let i=index" [ngClass]="renderListaSeleccionado(i,'animacionHechizo')" class="hechizo" (click)="desarrolladorService.addAnimacionHechizo(i)">
                     <img class="imagen" src="./assets/desarrollador/animacion.png">
                     <div class="nombre">[{{animacion.id}}] {{animacion.nombre}}</div>
                 </div>
@@ -67,7 +67,7 @@
                     <img class="imagen" src="./assets/desarrollador/papelera.svg">
                     <div class="nombre">Eliminar animación</div>
                 </div>
-                <div *ngFor="let animacion of this.desarrolladorService.animaciones.animaciones; let i=index" [ngClass]="renderListaSeleccionado('animacionBuff',i)" class="hechizo" (click)="desarrolladorService.addAnimacionBuff(i)">
+                <div *ngFor="let animacion of this.desarrolladorService.animaciones.animaciones; let i=index" [ngClass]="renderListaSeleccionado(i,'animacionBuff')" class="hechizo" (click)="desarrolladorService.addAnimacionBuff(i)">
                     <img class="imagen" src="./assets/desarrollador/animacion.png">
                     <div class="nombre">[{{animacion.id}}] {{animacion.nombre}}</div>
                 </div>
@@ -75,7 +75,7 @@
 
             <!-- LISTA HECHIZOS DISPONIBLES -->
             <ng-container *ngIf="tipo=='Hechizos_Disponibles'">
-                <div *ngFor="let hechizo of datos; let i=index" [ngClass]="renderListaSeleccionado('hechizo',i)" class="hechizo" >
+                <div *ngFor="let hechizo of datos; let i=index" [ngClass]="renderListaSeleccionado(i)" class="hechizo" >
                     <img class="imagen" src="./assets/Habilidades/Spell/{{hechizo.imagen_id}}.png">
                     <div class="nombre">[{{hechizo.id}}] {{hechizo.nombre}}</div>
                 </div>
@@ -83,7 +83,7 @@
 
             <!-- LISTA OBJETOS -->
             <ng-container *ngIf="tipo=='Equipo'">
-                <div *ngFor="let objeto of datos; let i=index" (click)="this.desarrolladorService.seleccionarObjeto(i)" [ngClass]="renderListaSeleccionado('equipo',i)" class="hechizo" >
+                <div *ngFor="let objeto of datos; let i=index" (click)="seleccionarElemento(i)" [ngClass]="renderListaSeleccionado(i)" class="hechizo" >
                     <img class="imagen" src="./assets/Items/{{formatearNombre(objeto.pieza)}}/{{objeto.imagen_id}}.png">
                     <div class="nombre">[{{objeto.id}}] {{objeto.nombre}}</div>
                 </div>
@@ -91,7 +91,7 @@
 
             <!-- LISTA CONSUMIBLE -->
             <ng-container *ngIf="tipo=='Consumible'">
-                <div *ngFor="let objeto of datos; let i=index" (click)="this.desarrolladorService.seleccionarObjeto(i)" [ngClass]="renderListaSeleccionado('consumible',i)" class="hechizo" >
+                <div *ngFor="let objeto of datos; let i=index" (click)="seleccionarElemento(i)" [ngClass]="renderListaSeleccionado(i)" class="hechizo" >
                     <img class="imagen" src="./assets/Items/{{objeto.tipo.toLowerCase()}}/{{objeto.imagen_id}}.png">
                     <div class="nombre">[{{objeto.id}}] {{objeto.nombre}}</div>
                 </div>
@@ -99,7 +99,7 @@
 
             <!-- LISTA ENEMIGOS -->
             <ng-container *ngIf="tipo=='Enemigos'">
-                <div *ngFor="let enemigo of datos; let i=index" (click)="this.desarrolladorService.seleccionarEnemigo(i)" [ngClass]="renderListaSeleccionado('enemigos',i)" class="hechizo" >
+                <div *ngFor="let enemigo of datos; let i=index" (click)="seleccionarElemento(i)" [ngClass]="renderListaSeleccionado(i)" class="hechizo" >
                     <img class="imagen" src="./assets/Enemigos/{{enemigo.familia.toLowerCase()}}/{{enemigo.imagen_id}}.png">
                     <div class="nombre">[{{enemigo.id}}] {{enemigo.nombre}}</div>
                 </div>
@@ -107,7 +107,7 @@
 
             <!-- LISTA EVENTOS -->
             <ng-container *ngIf="tipo=='Eventos'">
-                <div *ngFor="let evento of datos; let i=index" (click)="this.desarrolladorService.seleccionarEvento(i)" [ngClass]="renderListaSeleccionado('eventos',i)" class="hechizo" >
+                <div *ngFor="let evento of datos; let i=index" (click)="seleccionarElemento(i)" [ngClass]="renderListaSeleccionado(i)" class="hechizo" >
                     <img class="imagen" src="./assets/desarrollador/trigger.png">
                     <div class="nombre">[{{evento.id}}] {{evento.nombre}}</div>
                 </div>
@@ -115,7 +115,7 @@
 
             <!-- LISTA MISIONES -->
             <ng-container *ngIf="tipo=='Misiones'">
-                <div *ngFor="let mision of datos; let i=index" (click)="this.desarrolladorService.seleccionarMision(i)" [ngClass]="renderListaSeleccionado('misiones',i)" class="hechizo" >
+                <div *ngFor="let mision of datos; let i=index" (click)="seleccionarElemento(i)" [ngClass]="renderListaSeleccionado(i)" class="hechizo" >
                     <img class="imagen" src="./assets/desarrollador/mision.png">
                     <div class="nombre">[{{mision.id}}] {{mision.titulo}}</div>
                 </div>
@@ -123,7 +123,7 @@
 
             <!-- LISTA OBJETIVOS -->
             <ng-container *ngIf="tipo=='Objetivos'">
-                <div *ngFor="let objetivo of datos; let i=index" (click)="this.desarrolladorService.seleccionarObjetivoMision(i)" [ngClass]="renderListaSeleccionado('objetivo',i)" class="hechizo" >
+                <div *ngFor="let objetivo of datos; let i=index" (click)="seleccionarElemento(i)" [ngClass]="renderListaSeleccionado(i)" class="hechizo" >
                     <img class="imagen" src="./assets/desarrollador/mision.png">
                     <div class="nombre">[{{objetivo.id}}] {{objetivo.texto}}</div>
                 </div>
@@ -131,7 +131,7 @@
 
             <!-- LISTA TRIGGERS -->
             <ng-container *ngIf="tipo=='Triggers'">
-                <div *ngFor="let trigger of datos; let i=index" (click)="seleccionarElemento(i)" [ngClass]="renderListaSeleccionado('trigger',i)" class="hechizo" >
+                <div *ngFor="let trigger of datos; let i=index" (click)="seleccionarElemento(i)" [ngClass]="renderListaSeleccionado(i)" class="hechizo" >
                     <img class="imagen" src="./assets/desarrollador/trigger.png">
                     <div class="nombre">[{{trigger.id}}] {{trigger.identificador}}</div>
                 </div>
